Use custom network instead of deprecated links